--- a/src/games/game-template/styles/game.css
+++ b/src/games/game-template/styles/game.css
@@ -1,6 +1,11 @@
-body.game-background {
+/* FIXME: Update the CSS class name here. The code uses a common naming convention
+for css game background classes (e.g. "better-boids-game-background"). This is */
+/* because cleanup logic keys off of "game-background" being in the name, but */
+/* the game name is needed in order to prevent CSS class name collisions. */
+body.game-name-game-background {
   overflow: hidden; /* Prevent scrolling */
-  background-image: url("/webps/games/better-boids-background.webp"); /* FIXME: UPDATE TO GAME'S BKG IMG */
+  /* FIXME: UPDATE TO GAME'S BKG IMG */
+  background-image: url("/webps/games/better-boids-background.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
